--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ const pageDesc =
     buttonClass="normal-case"
     ctaVariant="secondary"
     ctaHref="/local-offer"
+    aria-label="Check the details of the Local Offer"
   />
   <Header />
   <main>
